--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <title>C-FREE</title>
   </head>
-  <body>
+  <body id="bootstrap-overrides">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
